# szview

./: .gitignore  CMakeLists.txt  ImageViewer.cpp  ImageViewer.h  README.md  config.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  webengineviewmanager.cpp  webengineviewmanager.h
app/: CMakeLists.txt  HassioLoader.h  SampleHttpServer.h  SimpleHttpServer.cpp  abstractviewer.cpp  abstractviewer.h  config.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  superwidget.cpp  superwidget.h  webengineviewmanager.cpp  webengineviewmanager.h
app/web/: index.html
helpers/: HassioLoader.cpp  configloader.cpp
web/: index.html
